--- a/index.html
+++ b/index.html
@@ -97,13 +97,7 @@ background="https://www.w3school.com.cn/i/eg_bg_06.gif">
    <li><a href="#home">Home</a></li>
   <li><a href="#news">News</a></li>
   <li  class="dropdown ">
-  <a class="dropbtn">关于作者</a>
-  
-<div class="dropdown-content">
-      <a href="#lb 1"><b>白樱和最棒的朋友羊驼！</b></a>
-
-    </div>
-</li>
+  <a class="dropbtn">关于作者</a></li>
 </ul>
 
 <div id="overflowTest">
